--- a/package.json
+++ b/package.json
@@ -1,24 +1,234 @@
 {
-  "name": "dry-runbuddy",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+  "name": "buddy-run-",
+  "version": "1.0.0",
+  "main": "next.config.js",
+  "directories": {
+    "lib": "lib"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.9",
+    "acorn": "^8.8.0",
+    "acorn-jsx": "^5.3.2",
+    "ajv": "^6.12.6",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "argparse": "^2.0.1",
+    "aria-query": "^4.2.2",
+    "array-includes": "^3.1.5",
+    "array-union": "^2.1.0",
+    "array.prototype.flat": "^1.3.0",
+    "array.prototype.flatmap": "^1.3.0",
+    "ast-types-flow": "^0.0.7",
+    "axe-core": "^4.4.3",
+    "axobject-query": "^2.2.0",
+    "balanced-match": "^1.0.2",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "call-bind": "^1.0.2",
+    "callsites": "^3.1.0",
+    "caniuse-lite": "^1.0.30001383",
+    "chalk": "^4.1.2",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "concat-map": "^0.0.1",
+    "core-js-pure": "^3.25.0",
+    "cross-spawn": "^7.0.3",
+    "damerau-levenshtein": "^1.0.8",
+    "debug": "^4.3.4",
+    "deep-is": "^0.1.4",
+    "define-properties": "^1.1.4",
+    "dir-glob": "^3.0.1",
+    "doctrine": "^3.0.0",
+    "dom-serializer": "^2.0.0",
+    "domelementtype": "^2.3.0",
+    "domhandler": "^5.0.3",
+    "domutils": "^3.0.1",
+    "emoji-regex": "^9.2.2",
+    "entities": "^4.4.0",
+    "es-abstract": "^1.20.1",
+    "es-shim-unscopables": "^1.0.0",
+    "es-to-primitive": "^1.2.1",
+    "escape-string-regexp": "^4.0.0",
+    "eslint": "^8.22.0",
+    "eslint-config-next": "^12.2.5",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-module-utils": "^2.7.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-scope": "^7.1.1",
+    "eslint-utils": "^3.0.0",
+    "eslint-visitor-keys": "^3.3.0",
+    "espree": "^9.3.3",
+    "esquery": "^1.4.0",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^5.3.0",
+    "esutils": "^2.0.3",
+    "fast-deep-equal": "^3.1.3",
+    "fast-glob": "^3.2.11",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fastq": "^1.13.0",
+    "file-entry-cache": "^6.0.1",
+    "fill-range": "^7.0.1",
+    "find-up": "^5.0.0",
+    "flat-cache": "^3.0.4",
+    "flatted": "^3.2.7",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "function.prototype.name": "^1.1.5",
+    "functional-red-black-tree": "^1.0.1",
+    "functions-have-names": "^1.2.3",
+    "get-intrinsic": "^1.1.2",
+    "get-symbol-description": "^1.0.0",
+    "glob": "^7.1.7",
+    "glob-parent": "^6.0.2",
+    "globals": "^13.17.0",
+    "globby": "^11.1.0",
     "gql": "^1.1.2",
+    "grapheme-splitter": "^1.0.4",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
+    "has": "^1.0.3",
+    "has-bigints": "^1.0.2",
+    "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.0",
+    "has-symbols": "^1.0.3",
+    "has-tostringtag": "^1.0.0",
+    "hoist-non-react-statics": "^3.3.2",
+    "html-dom-parser": "^3.1.2",
     "html-react-parser": "^3.0.4",
-    "next": "12.2.5",
+    "htmlparser2": "^8.0.1",
+    "ignore": "^5.2.0",
+    "import-fresh": "^3.3.0",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "inline-style-parser": "^0.1.1",
+    "internal-slot": "^1.0.3",
+    "is-bigint": "^1.0.4",
+    "is-boolean-object": "^1.1.2",
+    "is-callable": "^1.2.4",
+    "is-core-module": "^2.10.0",
+    "is-date-object": "^1.0.5",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-negative-zero": "^2.0.2",
+    "is-number": "^7.0.0",
+    "is-number-object": "^1.0.7",
+    "is-regex": "^1.1.4",
+    "is-shared-array-buffer": "^1.0.2",
+    "is-string": "^1.0.7",
+    "is-symbol": "^1.0.4",
+    "is-weakref": "^1.0.2",
+    "isexe": "^2.0.0",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^4.1.0",
+    "json-schema-traverse": "^0.4.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "json5": "^1.0.1",
+    "jsx-ast-utils": "^3.3.3",
+    "language-subtag-registry": "^0.3.22",
+    "language-tags": "^1.0.5",
+    "levn": "^0.4.1",
+    "locate-path": "^6.0.0",
+    "lodash.merge": "^4.6.2",
+    "loose-envify": "^1.4.0",
+    "lru-cache": "^6.0.0",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.5",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.6",
+    "ms": "^2.1.2",
+    "nanoid": "^3.3.4",
+    "natural-compare": "^1.4.0",
+    "next": "^12.2.5",
     "next-sitemap": "^3.1.21",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "object-assign": "^4.1.1",
+    "object-inspect": "^1.12.2",
+    "object-keys": "^1.1.1",
+    "object.assign": "^4.1.4",
+    "object.entries": "^1.1.5",
+    "object.fromentries": "^2.0.5",
+    "object.hasown": "^1.1.1",
+    "object.values": "^1.1.5",
+    "once": "^1.4.0",
+    "optimism": "^0.16.1",
+    "optionator": "^0.9.1",
+    "p-limit": "^3.1.0",
+    "p-locate": "^5.0.0",
+    "parent-module": "^1.0.1",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "path-type": "^4.0.0",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.1",
+    "postcss": "^8.4.14",
+    "prelude-ls": "^1.2.1",
+    "prop-types": "^15.8.1",
+    "punycode": "^2.1.1",
+    "queue-microtask": "^1.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^16.13.1",
+    "react-property": "^2.0.0",
+    "regenerator-runtime": "^0.13.9",
+    "regexp.prototype.flags": "^1.4.3",
+    "regexpp": "^3.2.0",
+    "resolve": "^1.22.1",
+    "resolve-from": "^4.0.0",
+    "reusify": "^1.0.4",
+    "rimraf": "^3.0.2",
+    "run-parallel": "^1.2.0",
+    "scheduler": "^0.23.0",
+    "semver": "^7.3.7",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "side-channel": "^1.0.4",
+    "slash": "^3.0.0",
+    "source-map-js": "^1.0.2",
+    "string.prototype.matchall": "^4.0.7",
+    "string.prototype.trimend": "^1.0.5",
+    "string.prototype.trimstart": "^1.0.5",
+    "strip-ansi": "^6.0.1",
+    "strip-bom": "^3.0.0",
+    "strip-json-comments": "^3.1.1",
+    "style-to-js": "^1.1.1",
+    "style-to-object": "^0.3.0",
+    "styled-jsx": "^5.0.4",
+    "supports-color": "^7.2.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "symbol-observable": "^4.0.0",
+    "text-table": "^0.2.0",
+    "to-regex-range": "^5.0.1",
+    "ts-invariant": "^0.10.3",
+    "tsconfig-paths": "^3.14.1",
+    "tslib": "^2.4.0",
+    "tsutils": "^3.21.0",
+    "type-check": "^0.4.0",
+    "type-fest": "^0.20.2",
+    "typescript": "^4.8.2",
+    "unbox-primitive": "^1.0.2",
+    "uri-js": "^4.4.1",
+    "use-sync-external-store": "^1.2.0",
+    "v8-compile-cache": "^2.3.0",
+    "which": "^2.0.2",
+    "which-boxed-primitive": "^1.0.2",
+    "word-wrap": "^1.2.3",
+    "wrappy": "^1.0.2",
+    "yallist": "^4.0.0",
+    "yocto-queue": "^0.1.0",
+    "zen-observable": "^0.8.15",
+    "zen-observable-ts": "^1.2.5"
   },
-  "devDependencies": {
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5"
-  }
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
