--- a/package.json
+++ b/package.json
@@ -226,7 +226,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "next start"
   },
   "author": "",
   "license": "ISC",
