--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-#NEXT_PUBLIC_WORDPRESS_API_URL=https://buddyrun.wpenginepowered.com
+NEXT_PUBLIC_WORDPRESS_API_URL=https://buddyrun.wpenginepowered.com
